[package]
name = "untanglr"
version = "1.1.0"
authors = ["Andrei BUTNARU <abutnaru@outlook.com>"]
edition = "2021"
license = "MIT"
description = """Probabilistically split concatenated words using NLP based \
	on English Wikipedia unigram frequencies."""
repository = "https://github.com/abutnaru/untanglr"
keywords = ["string", "split"]
categories = ["text-processing"]

[[bin]]
name = "untanglr"
path = "src/bin.rs"

[lib]
name = "untanglr"
path = "src/lib.rs"

[dependencies]
regex = "1.6.0"
